Added javascript interop

--- a/BlazorHosted/BlazorHosted.Client/BlazorHosted.Client.csproj
+++ b/BlazorHosted/BlazorHosted.Client/BlazorHosted.Client.csproj
@@ -20,6 +20,7 @@
     <Folder Include="JavaScriptInterop\" />
     <Folder Include="Proxy\" />
     <Folder Include="Services\" />
+    <Folder Include="wwwroot\scripts\" />
   </ItemGroup>
 
 </Project>
